<resources>
    <string name="app_name">Note</string>
    <string name="new_note">New Note</string>
    <string name="clear">clear</string>
    <string name="note_title">Note Title:</string>
    <string name="note_body">Note Body:</string>
    <string name="back">back</string>
    <string name="create">create</string>
    <string name="title">Title</string>
    <string name="text">Text...</string>
    <string name="empty">Empty</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_email">Contact Email</string>
    <string name="name">Name</string>
    <string name="contacts">contacts</string>
    <string name="notes">Notes</string>
    <string name="new_contact">New Contact</string>
    <string name="created_at">Created at:</string>
</resources>
