<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screen.title.TitleFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:id="@+id/titleFragment"
        android:orientation="vertical">

        <Button
            android:id="@+id/goToNoteList"
            style="@style/titleBottomButton"
            android:textColor="@color/white"
            android:background="@color/PrimeColor"
            android:text="@string/notes"
            tools:ignore="NestedWeights" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            tools:ignore="InefficientWeight">

            <Button
                android:id="@+id/goToAddNewContact"
                style="@style/titleBottomButton"
                android:textColor="@color/white"
                android:background="@color/SecondColor"
                android:text="@string/new_contact"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/goToAddNewNote"
                android:background="@color/white"
                android:textColor="@color/PrimeColor"
                style="@style/titleBottomButton"
                android:text="@string/new_note" />

        </LinearLayout>
    </LinearLayout>
</layout>


