<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="noteListViewModel"
            type="hu.zsra.note.screen.note_list.NoteListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.note_list.NoteListFragment">

        <Button
            android:id="@+id/new_note"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:background="@color/PrimeColor"
            android:onClick="@{() -> noteListViewModel.onNew()}"
            android:text="@string/new_note"
            style="@style/Buttons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/clear_notes"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="170dp"
            android:background="@color/SecondColor"
            android:onClick="@{() -> noteListViewModel.onClear()}"
            android:text="@string/clear"
            style="@style/Buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/contacts"
            android:layout_marginStart="288dp"
            android:layout_marginTop="24dp"
            android:background="@color/ThirdColor"
            android:text="@string/contacts"
            style="@style/Buttons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/note_list"
            android:layout_width="409dp"
            android:layout_height="657dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_note" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>