<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <data>
        <variable
            name="contactCreateViewModel"
            type="hu.zsra.note.screen.contact_create.ContactCreateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.contact_create.ContactCreateFragment">

        <Button
            android:id="@+id/contact_create"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:background="@color/PrimeColor"
            android:onClick="@{() -> contactCreateViewModel.onSetContact()}"
            android:text="@string/create"
            style="@style/Buttons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="124dp"
            android:text="@string/contact_email"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/contact_create"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/contact_name_crt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="48dp"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:focusable="true"
            android:inputType="text"
            android:minWidth="200sp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/contact_create"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/contact_email_crt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/contact_email"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_email"
            android:inputType="textEmailAddress" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>